@@ -1,3 +1,0 @@
-Version 0.04:
-    * make popup window resizeble
-
