@@ -25,4 +25,5 @@
 	- add popup window default width and height items to settings dialog
 	- change PopupWindow base class from QWidget to QFrame
 	- add D-Bus support
+	- make popup window resizable
 
